[package]
name = "gulch"
version = "0.1.0"
authors = ["patrickoconnor"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
fern = "0.5"
log = "0.4"
rocket = "^0.4.6"
reqwest = {version = "^0.10.9", features = ["blocking"]}
serde = {version = "^1.0.117", features = ["derive"]}
url = "^2.2.0"

[dependencies.rocket_contrib]
version = "^0.4.6"
default-features = false
features = ["json"]
